[gd_scene load_steps=3 format=3 uid="uid://cdu67iwdtqt37"]

[ext_resource type="Theme" uid="uid://d5g6eqtwjes" path="res://ui/default_theme.tres" id="1_b4fp3"]
[ext_resource type="Script" path="res://ui/menus/victory_dialog.gd" id="2_gb4kw"]

[node name="VictoryDialog" type="ColorRect"]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_b4fp3")
color = Color(0.0431373, 0.501961, 0.866667, 1)
script = ExtResource("2_gb4kw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeadingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "Victory!"
horizontal_alignment = 1
uppercase = true

[node name="FlavorTextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
text = "Well fought, earth is save for another day!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0

[node name="HighscoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "New Highscore!"
horizontal_alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Play again"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Continue"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
